src/test/ui/mismatched_types/fn-variance-1.stderr
error[E0631]: type mismatch in function arguments
  --> $DIR/fn-variance-1.rs:21:5
   |
21 |     apply(&3, takes_mut);
   |     ^^^^^
   |     |
   |     expected signature of `fn(&{integer}) -> _`
   |     found signature of `for<'r> fn(&'r mut isize) -> _`
   |
   = note: required by `apply`

error[E0631]: type mismatch in function arguments
  --> $DIR/fn-variance-1.rs:28:5
   |
28 |     apply(&mut 3, takes_imm);
   |     ^^^^^
   |     |
   |     expected signature of `fn(&mut {integer}) -> _`
   |     found signature of `for<'r> fn(&'r isize) -> _`
   |
   = note: required by `apply`

error: aborting due to 2 previous errors

